footer search fix + hero z-index fix

--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/block-styles/styles/style.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/block-styles/styles/style.scss
@@ -252,7 +252,9 @@ IMAGES
         }
     }
 }
-
+.wp-block-cover.is-style-torn-bottom{
+    z-index: 0;
+}
 .is-style-torn-bottom {
 
     position: relative;
