--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/styles/breakpoints/_small.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/styles/breakpoints/_small.scss
@@ -446,14 +446,14 @@ FOOTER
     .search-form {
 
         width: 50vw;
-        &__submit {
+        // &__submit {
     
-           left: 0;
-        }
-        &__field {
+        //    left: 0;
+        // }
+        // &__field {
 
-            position: -7vw;
-        }
+        //     position: -7vw;
+        // }
     }
 
     .social-container {
